--- a/views/admin/productlist.ejs
+++ b/views/admin/productlist.ejs
@@ -31,7 +31,8 @@
                                   <tr>
                                     <td><%= [i+1] %></td>
                                     <td>
-                                    <img class="img-fluid p-1 " style="height: 50px;width: 50px ;border-radius: 10px;" src="/uploads/<%= products[i].imageUrl[0] %>" alt="">
+
+                                    <img class="img-fluid  " style="height: 70px;width: 70px ;border-radius: 5px;" src="/uploads/<%= products[i].imageUrl[0] %>" alt="">
                                     </td>
                                     <td><span ><%= products[i].name %></span></td>
             
