--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,7 +150,7 @@ display: none;
 }
 
 .product_card {
-  height: 250px;
+  height: 300px;
 }
 .Main_box a {
   color: black;
@@ -165,7 +165,7 @@ display: none;
 .prod_img {
   position: absolute;
   width: 70%;
-  height: 52%;
+  height: 62%;
   cursor: pointer;
   right: 0;
   top: 0;
@@ -173,7 +173,7 @@ display: none;
   border-radius: 20px;
   transition: 0.5s ease-in-out;
   z-index: 1;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px
 }
 .prod_img > img {
   width: 100%;
@@ -186,13 +186,13 @@ display: none;
 .product_card {
   border-radius: 10%;
   position: relative;
-  overflow: hidden;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: rgb(255, 255, 255);
   transition: 0.5s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+overflow: hidden;
 }
 .product_card:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 18px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .detail_btm {
@@ -200,7 +200,7 @@ display: none;
   width: 100%;
   height: 50%;
   cursor: pointer;
-  bottom: -17%;
+  bottom: -23%;
   padding: 10px 10px 10px 20px;
   transition: 0.5s ease-in-out;
   line-height: 10px;
@@ -208,7 +208,7 @@ display: none;
   background-color: rgba(240, 248, 255, 0.324);
 }
 .detail_btm:hover {
-  bottom: -4%;
+  bottom: -13%;
 }
 #name {
   font-size: 1.2rem;
@@ -300,7 +300,6 @@ display: none;
   width: 32%;
   height: 60vh;
   overflow: hidden;
-
   cursor: pointer;
 }
 @media only screen and (max-width : 480px) {
