--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -1,117 +1,336 @@
 
 <%- include('../htmlbody/Adminheader') -%>
-<main>
+
+<style>
+  #range{
+ height: 10px;
+ background-color: green;
+ border-radius: 20px;
+ }
+ .context_box{padding: 20px;
+     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+ }
+.orderspan p{
+color: red;
+}
+
+ .orderdtailbtn{
+     background-color: rgb(25, 142, 97);
+   color: white;
+   border: none;
+   padding: 5px 15px;
+   border-radius: 10px;
+   margin-bottom: 1rem;
+   box-shadow:inset rgba(249, 249, 249, 0.647) 0px 2px 4px 0px;
+   transition: 0.5s ease-in-out;
+ }
+
+ .returnbtn{
+     background-color: rgb(255, 85, 0);
+     color: white;
+   border: none;
+   padding: 5px 15px;
+   border-radius: 10px;
+   margin-bottom: 1rem;
+   box-shadow:inset rgba(249, 249, 249, 0.647) 0px 2px 4px 0px;
+ }
+ .cancelledbtn{
+     background-color: rgb(244, 110, 44);
+     color: white;
+   border: none;
+   padding: 5px 15px;
+   border-radius: 10px;
+   margin-bottom: 1rem;
+   box-shadow:inset rgba(249, 249, 249, 0.647) 0px 2px 4px 0px;
+ }
+.img_scroll::-webkit-scrollbar{
+display: none;
+}
+.row_box{
+margin-bottom: 1rem;
+box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+padding: 15px;
+}
+.rturnbars{
+  display: flex;
+ width: 100%;
+ height: 30px;
+
+}
+.bars{
+ display: flex;
+ width: 100%;
+ height: 30px;
+ animation: colrslide 1s linear forwards 1;
+ transform: translate(-10rem);  
+}
+@keyframes colrslide{
+ 100%{
+     transform: translate(0rem);
+ }
+}
+
+
+.canelanimationcolr{
+ width: 10px;
+height: 10px;
+border-radius: 50%;
+background-color: rgb(244, 110, 44);
+position: absolute;
+right: 10px;
+align-items: center;
+display: flex;
+justify-content: center;
+}
+
+
+
+
+.progressbar{
+ height:10px;
+ border-radius: 20px;
+background-color: rgb(25, 142, 97);
+box-shadow:inset rgba(249, 249, 249, 0.647) 0px 2px 4px 0px;
+}
+.cancelprogressbar{
+ height:10px;
+ border-radius: 20px;
+ background-color: rgb(244, 110, 44);
+box-shadow:inset rgba(249, 249, 249, 0.769) 0px 2px 4px 0px;  
+}
+.retunprogressbar{
+ height:10px;
+ border-radius: 20px;
+ background-color: rgb(255, 85, 0);
+box-shadow:inset rgba(249, 249, 249, 0.769) 0px 2px 4px 0px; 
+}
+</style>
 
 
 <div class="container">
 
-    <div class="row row_box mt-5">
-       
-    <div class=" mx-4 col-lg-8 col-md-12 mb-4 mb-lg-0 ">
+   <div class="row row_box mt-5">
+      
+   <div class=" col-lg-8 col-md-12 mb-4 mb-lg-0 ">
 
-        <div class=" py-3 ">
-            <h5 class="mb-0">Order details</h5>
-            </div>
-    <% for( let index = 0; index < orders.product.length; index++) { %>
-        <div class="row context_box">
+       <div >
+           <h5 class="mb-2">
+              Order details
+             </h5>
+           </div>
+   <% for( let index = 0; index < orders.product.length; index++) { %>
+       <div class="row context_box mb-2 ">
 
-      <div class="col-10 col-sm-2">
-    <img  class="img-fluid p-1 " style="border-radius: 10px;" src="/uploads/<%= orders.product[index].image  %>" alt="">
+     <div class="col-6 col-sm-3" style="border-radius: 10px; height: 100px;min-height: 130px;max-width: 130px;">
+   <img  class="img-fluid " style="height: 100%;width: 100%;"  src="/uploads/<%= orders.product[index].image  %>" alt="">
+         </div>
+
+         <div class="col-lg-5 col-5">
+           <p>Name:
+               <%= orders.product[index].name  %>
+           </p>
+           <p>Price:
+           Rs  <%= orders.product[index].price  %>
+           </p>
+           <p>Quantity:  <%= orders.product[index].quantity  %>
+               </p>
+           </div> 
+           <div class="col-4 mt-3 mt-sm-0">
+            <% if (orders.status=="Cancelled") { %>
+              <button type="button" disabled class="btn btn-danger">
+              cancelled
+                </button>
+            <% } else { %>
+            
+            <select  class="rounded-pill px-2"  id="statusbar<%= orders._id%>" onchange="handlestatus('<%= orders._id%>')" 
+            style="border: none;outline: none;padding: 1px;height: 45px;" >
+            <option value="<%= orders.status%>" style="background-color: rgb(114, 232, 224);"> <%= orders.status%> (C)</option>
+            <option value="Order placed">Order placed</option>
+            <option value="Order Shipped">Order Shipped</option>
+            <option value="Out for delivery">Out for delivery</option>
+            <option value="Order Arrived">Order Arrived</option>
+            <option value="Cancelled">Cancelled</option>
+            </select>
+            <% } %>
           </div>
-          <div class="col-lg-6 ">
-            <p>Name:
-                <%= orders.product[index].name  %>
-            </p>
-            <p>Price:
-            Rs  <%= orders.product[index].price  %>
-            </p>
-            <p>Quantity:  <%= orders.product[index].quantity  %>
-                </p>
-            </div> <% } %>   
+ </div>
 
-            <div class="col-3">
-             
-
-              <% if (orders.status=="Cancelled") { %>
-                <button type="button" disabled class="btn btn-danger">
-                cancelled
-                  </button>
-              <% } else { %>
-              
-              <select  class="rounded-pill px-2"  id="statusbar<%= orders._id%>" onchange="handlestatus('<%= orders._id%>')" 
-              style="border: none;outline: none;padding: 1px;height: 45px;" >
-              <option value="<%= orders.status%>" style="background-color: rgb(114, 232, 224);"> <%= orders.status%> (C)</option>
-              <option value="Order placed">Order placed</option>
-              <option value="Order Shipped">Order Shipped</option>
-              <option value="Out for delivery">Out for delivery</option>
-              <option value="Order Arrived">Order Arrived</option>
-              <option value="Cancelled">Cancelled</option>
-              </select>
-              <% } %>
-            </div>
-  </div>
+   <% } %>  
 
 </div>
 
-    <!--  -->
-   
-    <div class="col-md-3 mx-3">
-        <div class="card mb-4">
-          <div class="card-header py-3">
-            <h5 class="mb-0">Summary</h5>
-          </div>
-          <div class="card-body">
-            <ul class="list-group list-group-flush">
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                Products
-                <span><i class="fa-solid fa-indian-rupee-sign"></i> <%= orders.total  %></span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                Shipping
-                <span>Free</span>
-              </li>
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                <div>
-                  <strong>Total amount</strong>
-                
-                </div>
-                <span><strong><i class="fa-solid fa-indian-rupee-sign"></i> <span> <%= orders.total  %></span></strong></span>
-              </li>
-            </ul>
-      </div>   
    <!--  -->
-    </div>
+  
+   <div class="col-md-12 col-sm-12 col-lg-3 mx-auto">
+       <div class="card mb-4">
+         <div class="card-header py-3">
+           <h5 class="mb-0">Summary</h5>
+         </div>
+         <div class="card-body">
+           <ul class="list-group list-group-flush">
+             <li
+               class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+               Products
+               <span><i class="fa-solid fa-indian-rupee-sign"></i> <%= orders.total  %></span>
+             </li>
+             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+               Shipping
+               <span>Free</span>
+             </li>
+             <li
+               class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+               <div>
+                 <strong>Total amount</strong>
+               </div>
+               <span><strong><i class="fa-solid fa-indian-rupee-sign"></i> <span> <%= orders.total  %></span></strong></span>
+             </li>
+           </ul>
+     </div>  
+
+   <a href="#!">
+   <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)">
+  </div>
+   </a>
  
-    </div>
+   </div>
+  <p>Payment Method: 
+    <%= orders.paymentMethod %><span><i style="color: orange;margin-left: 10px;" class="fa-solid fa-money-bill-wave"></i></span>
+    </p>
+   </div>
 
-    </div>
-  <div class="container">
-    <div class="row">
+   <div class="col-12 col-lg-8 me-auto">
+     <div class="card mb-2">
+       <div class="card-header py-2 " style="background-color: rgb(255, 255, 255);">
+         <h5 class="mb-0">Address</h5>
+       </div>
+       <div class="card-body ">
+         <ul class="list-group list-group-flush">
+           <li
+             class=" d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+             Name : <%= locals.address.name  %>
+           </li>
+           <li class=" d-flex justify-content-between align-items-center px-0">
+             Address :
+             <%= locals.address.adressLine1  %>
+           </li>
+           <li
+             class=" d-flex justify-content-between align-items-center border-0 px-0 ">
+             <%= locals.address.city  %>
+           </li>
+           <li
+           class=" d-flex justify-content-between align-items-center border-0 px-0 ">
+           <%= locals.address.state  %>
+         </li>
+         <li
+         class=" d-flex justify-content-between align-items-center border-0 px-0 ">
+         Pincode : <%= locals.address.pin  %>
+       </li>
+       <li
+       class=" d-flex justify-content-between align-items-center border-0 px-0 ">
+       Mobile : <%= locals.address.mobile  %>
+     </li>
+         </ul>
+   </div>  
+
+ </div>
 
 
-    <div class="col-10 col-sm-8 mt-4">
-        <h4>Address</h4>
-        <p> <span>Name: </span><%= locals.address.name  %></p>
-        <p><span>Mobile: </span><%= locals.address.mobile  %></p>
-        <p><span>Address line: </span><%= locals.address.adressLine1  %></p>
-        <p><span>City: </span><%= locals.address.city  %></p>
-        <p><span>State: </span><%= locals.address.state  %></p>
-        <p><span>Country: </span><%= locals.address.country  %></p>
-        <p><span>Pincode: </span><%= locals.address.pin  %></p>
-    </div>
-    <div class="col-10 col-sm-4 mx-auto text-center">
-      <h4>Payment</h4>
-      <p>Payment Method:
-          <%= orders.paymentMethod %>
-          </p>
+ </div> 
+
+ <!-- <div class="col-10 col-lg-3  text-center  mx-auto">
+     <p>Payment Method:
+   <%= orders.paymentMethod %>
+   </p>
+ </div> -->
+
+
+
   </div>
-</div>
-  </div>
+<!-- bottom section -->
+<div class="contailer-fluid" style="overflow: hidden;">
+   <div class="row mt-4 ">
+       <div class="col-12 d-flex justify-content-between ">
+       <div class="col-3 text-center m-auto ">
+       <p> Order placed</p>
+       <span >
+       <i class="fa-solid fa-file-pen" style="font-size: 1.6rem;"></i>
+       </span>
+       </div>
+       <div class="col-3 text-center m-auto ">
+       <p> Order Shipped</p>
+       <span >
+       <i class="fa-solid fa-box-open" style="font-size: 1.6rem;"></i>
+       </span>
+       </div>
+       <div class="col-3 text-center m-auto ">
+       <p>Out for delivery</p>
+       <span >
+       <i class="fa-solid fa-truck-fast"style="font-size: 1.6rem;"></i>
+       
+       </span>
+       </div>
+       <div class="col-3 text-center m-auto ">
+       <p>Order Arrived</p>
+       <span >
+       <i class="fa-solid fa-house"style="font-size: 1.6rem;"></i>
+       </span>
+       </div>
+       </div>
 
-</main>
+       <div class="container mb-4">
+   
+         <% if ( orders.status ==="Order placed") { %>
+           <div class="bars" style="width: 13%;">
+       <div  style="width: 100%;" class="progressbar"></div>
+       <div class="animationcolr">
+           <div class="whiteball"></div>
+       </div>
+           </div>
+       
+       <% } %>
+       <% if ( orders.status ==="Order Shipped") { %>
+           <div class="bars" style="width: 39%;">
+               <div  style="width: 100%;" class="progressbar"></div>
+               <div class="animationcolr">
+                   <div class="whiteball"></div>
+               </div>
+                   </div>
+       <% } %>
+       <% if ( orders.status ==="Out for delivery") { %>
+           <div class="bars" style="width: 63%;">
+               <div  style="width: 100%;" class="progressbar"></div>
+               <div class="animationcolr">
+                   <div class="whiteball"></div>
+               </div>
+                   </div>
+       <% } %>
+       <% if ( orders.status ==="Order Arrived") { %>
+           <div class="bars" style="width: 100%;">
+               <div  style="width: 100%;" class="progressbar"></div>
+               <div class="animationcolr">
+                   <div class="whiteball"></div>
+               </div>
+                   </div>
+       <% } %>
+       <% if ( orders.status ==="Returned") { %>
+           <div class="rturnbars" style="width: 100%;">
+               <div  style="width: 100%;" class="retunprogressbar"></div>
+             
+                   </div>
+           <% } %>
+       
+       <% if ( orders.status ==="Cancelled") { %>
+           <div class="rturnbars" style="width: 100%;">
+               <div  style="width: 100%;" class="cancelprogressbar"></div>
+         
+                   </div>
+       <% } %>
+       
+       </div>
+       
+       </div>
 
+   </div>
 
 
 <%- include('../htmlbody/AdminFooter') -%>
