--- a/views/htmlbody/Adminheader.ejs
+++ b/views/htmlbody/Adminheader.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/vendors/typicons.font/font/typicons.css">
     <link rel="stylesheet" href="/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="/css/vertical-layout-light/style.css">
-    <link rel="stylesheet" href="/css/asminstyle.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <style>
@@ -32,7 +32,7 @@ button>i{
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="/furnica/admin/dashboard"><img src="/assests/logo.png" alt="logo"/></a>
+          <a class="navbar-brand brand-logo" href="/admin/"><img src="/assests/logo.png" alt="logo"/></a>
           <!-- <a class="navbar-brand brand-logo" href="index.html"><img src="/assests/logo.png" alt="logo"/></a> -->
           <button class="navbar-toggler navbar-toggler align-self-center d-none d-lg-flex" type="button" data-toggle="minimize">
             <span class="typcn typcn-th-menu"></span>
@@ -115,7 +115,7 @@ button>i{
             <p class="sidebar-menu-title">Dash menu</p>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/dashboard">
+            <a class="nav-link" href="/admin/">
               <i class="typcn typcn-device-desktop menu-icon"></i>
               <span class="menu-title">Dashboard </span>
             </a>
