--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -27,7 +27,7 @@
     <div class="row mb-1"onclick="handleProductSelect('<%= locals.products[index].name  %>')" >
 
         <div class="col-4 col-sm-4" >
-         <img class="img-fluid" src="/uploads/<%= locals.products[index].imageUrl[0]  %>" alt="">
+         <img class="img-fluid" src="<%= locals.products[index].imageUrl[0]  %>" alt="">
         </div>
         <div class="col-4">
              <p><%= locals.products[index].name  %> </p>
