--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -44,7 +44,7 @@
 
 <!--  -->
 <div class="card m-auto" style="width: 18rem;">
-  <img class="card-img-top" style="height: 200px;" src="/uploads/<%= locals.bannerdata[index].imageUrl  %>"alt="Card image cap">
+  <img class="card-img-top" style="height: 200px;" src="<%= locals.bannerdata[index].imageUrl  %>"alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><%= locals.bannerdata[index].heading %></h5>
     <p class="card-text"><%= locals.bannerdata[index].subheading %></p>
