--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -50,7 +50,7 @@
                     ></path>
                   </svg>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row  m-auto">
                   <div class="col-md-6 col-lg-6 col-xl-5 order-2 order-lg-1">
                     <p class="h2 mb-5 me-auto mx-1 mx-md-4 mt-4">login</p>
 
@@ -92,7 +92,7 @@
                         <span id="nameError"></span>
                       </div>
 
-                      <div class="col-6">
+                      <div class="col-6 m-auto text-center">
                         <button type="submit" class="btn logintbn btn-block">
                           Sign in
                         </button>
