--- a/views/admin/salesreport.ejs
+++ b/views/admin/salesreport.ejs
@@ -5,11 +5,11 @@
                    <div class="row">
                     <div class="col-7  m-auto">
 
-                 <div class="row ">               
-                    <div class="col-6 text-center  m-auto rounded-pill text-light p-1 bg-primary" style="display: flex;  justify-content: center;align-items: center;">
+                 <div class="row  bg-primary rounded-pill ">               
+                    <div class="col-12 text-center  m-auto  text-light " style="display: flex;  justify-content: center;align-items: center;gap: 3px;padding-left: 40px;">
            
-                            <h2 id="headname"> <%= locals.durations %> </h2> 
-                           <h2 class="mx-2"> orders</h2>
+                            <h2 id="headname" > <%= locals.durations %> </h2> 
+                           <h2 > orders</h2>
                         <h1><%= locals.orderlength  %></h1> 
                         <button class="btn" onclick="handlepdf('<%= locals.durations %>')">
                             <i style="font-size: 1.2rem;color: white;" class="fa-solid fa-download"></i>
