--- a/views/admin/updatebanner.ejs
+++ b/views/admin/updatebanner.ejs
@@ -20,7 +20,7 @@
     </div>
         <div class="form-group mt-2">
             <div class="col-7 col-sm-3">
-                <img class="img-fluid" src="/uploads/<%= locals.bannerdata.imageUrl %>" alt="">
+                <img class="img-fluid" src="<%= locals.bannerdata.imageUrl %>" alt="">
             </div>
       <label for="productImage">Banner Image:</label>
 
