--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -40,13 +40,13 @@ border-radius: 10px;
 <% for( let index = 0; index < cart.length; index++ ) { %>
 
 <div class="row mb-3" style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;padding: 10px; border-radius: 10px;">
-<div class="col-10 m-auto  col-lg-4 col-md-12 cartimage ">
-<img class="img-fluid" style="width: 100%;height: 100%;"  src="/uploads/<%= locals.cart[index].product.imageUrl[0] %>"  />
+<div class="col-11 m-auto  col-lg-3 col-sm-8 cartimage ">
+<img class="img-fluid" style="width: 100%;height: 100%;"  src="<%= locals.cart[index].product.imageUrl[0] %>"  />
 </div>
 
-<div class="col-12  col-lg-5 col-md-10 mb-4 mb-lg-0 mt-lg-0 mt-3 ">
+<div class="col-12  col-lg-7 col-md-10 mb-4 mb-lg-0 mt-lg-0 mt-3 ">
 <div class="row ">
-  <div class="col-9">
+  <div class="col-9 ">
     <h5><strong>  <%= locals.cart[index].product.name %></strong></h5>
   </div>
   <div class="col-3">
