--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -329,7 +329,7 @@
     <% for( let index = 0; index < cart.length; index++ ) { %>
      <div class="row">
 <div class="col-5">
-  <img class="img-fluid" style="width: 60%; height: 75px;" src="/uploads/<%= locals.cart[index].product.imageUrl[0]  %>" alt="">
+  <img class="img-fluid" style="width: 60%; height: 75px;" src="<%= locals.cart[index].product.imageUrl[0]  %>" alt="">
 </div>
 <div class="col-9">
   <div class="row">
