--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -43,6 +43,8 @@ alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
 <button onclick="handlewallet()" class="btn">Wallet <span><i class="fa-solid fa-wallet"></i></span></button></a>
 </button><br>
 <div class="col-12"  id="walletshow">
+  <button  type="button" class="btn " data-toggle="modal" data-target="#exampleModalLong">wallet history  <span><i class="fa-sharp fa-solid fa-clock-rotate-left"></i></span> </button>
+
   <div class="row">
     <p class="mt-3" style="color: rgb(255, 255, 255);">Balance amount  <i class="fa-solid fa-indian-rupee-sign"></i> <span style="font-weight: 600;" >
   <%= locals.walletamount  %>
@@ -50,7 +52,6 @@ alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
   </div>
 
 
-<button  type="button" class="btn " data-toggle="modal" data-target="#exampleModalLong">wallet history  <span><i class="fa-sharp fa-solid fa-clock-rotate-left"></i></span> </button>
 
 </div>
 
@@ -179,9 +180,6 @@ alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
   <span class="text-muted"  id="copypopup"></span>
 
   </div>
-
-
-
 <hr class="mt-0 mb-4">
 
 <p>Address <span> 
@@ -189,17 +187,16 @@ alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
         <i style="color: rgb(54, 180, 54);" class="fa-solid fa-circle-plus"></i>
       </button>
    
-</span></p> 
+</span>
+</p> 
 
 <!--  -->
 <% if (address.length>0) { %>
-
 <div class="row pt-1">
 <% for( let index = 0; index < address.length; index++ ) { %>
   <div class="col-12 d-flex" style="border-bottom: 1px grey solid;">
     <span style="font-weight: 600;font-size: 1.4rem;margin-right: 1rem;">*</span>
     <p class="text-muted" id="name<%=[index]%>">
- 
 <%= locals.address[index].name  %>
 </p> 
 <div class="col-4 d-flex " style="position: absolute;right: 0;" >
