--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -244,7 +244,10 @@
     const passError = document.getElementById("passError");
     const conpassError = document.getElementById("conpassError");
 
-    const nameregx = /^[A-Za-z]{3,12}$/;
+    // const nameregx = /^[A-Za-z]{3,12}$/;
+    const nameregx=/^[A-Za-z]+([-\']?[A-Za-z]+)*(\s[A-Za-z]+([-\']?[A-Za-z]+)*)*$/
+
+
     const numregx = /^[6-9]\d{9}$/;
     const emailregx = /\b^[^ ][a-z.\-_0-9]+@[a-z0-9]+\.[a-z]{2,3}\b/;
     const passregx = /^(?=.*\d)(?=.*[a-zA-Z]).{4,14}$/;
