--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -17,7 +17,7 @@
       <div class="row">
       <div class="col-lg-3 col-md-12 col-4 mb-4 mb-lg-0">
       <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-      <img src="/uploads/<%= locals.wishlistProducts[index].imageUrl[0] %>"
+      <img src="<%= locals.wishlistProducts[index].imageUrl[0] %>"
       class="w-100" />
       <a href="#!">
       <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
