--- a/views/user/productsdetails.ejs
+++ b/views/user/productsdetails.ejs
@@ -74,7 +74,7 @@ height: 35vh;
         </div>
         </div>
        
-        <div class="col-10 col-md-10 col-lg-6 ">
+        <div class="col-12 col-md-10 col-lg-6 ">
             <main class="col-12 ">
                 <div class="ps-lg-3 ">
                   <h4 class="title text-dark"><%= details.name %></h4>
@@ -158,7 +158,7 @@ height: 35vh;
 </div>
 
 <section class="bg-light border-top py-4">
-    <div class="container">
+    <div class="container ">
       <div class="row gx-4">
         <div class="col-lg-8 mb-4">
           <div class="border rounded-2 px-3 py-2 bg-white">
@@ -177,7 +177,7 @@ height: 35vh;
                 class="tab-pane fade show active"
                
               >
-                <p><%= details.overview %></p>
+                <p style="font-size: 0.9rem;" ><%= details.overview %></p>
               </div>
             </div>
           </div>
@@ -185,13 +185,16 @@ height: 35vh;
         
       </div>
     </div>
-    <!--  -->
   
+  </section>
+
+  <section>
+      <div class="container-fluid ">
   <% if (locals.reviewlist.length>0) { %>
     <div class="container m-auto ">
       <h5>Reviews </h5>
         <div class="row mb-4 " >  
-          <div class="col-5 m-auto text-center">
+          <div class="col-11 col-sm-5 m-auto text-center">
              <input type="text" placeholder="add review" class="form-control" id="reviewInput">
               <button id="showaddbtn" class="btn btn-success mt-2" 
               onclick="handlereview('<%= locals.userdata._id %>','<%= locals.details._id %>','<%= locals.userdata.name %>')">Add Review</button>
@@ -201,16 +204,16 @@ height: 35vh;
     </div>
   <% } %>
   
-  <div class="container">
+     <div class="container-fluid">
   
     <% for( let index = 0; index < Listreview.length; index++ ) { %>
-      <div class="container">
-        <div class="col-12 col-sm-8">
+   <div class="row mx-auto">
+        <div class="col-12 col-sm-8 ">
         
         <div class="card mb-3">
           <div class="card-body">
             <div class="d-flex flex-start">
-              <img class="rounded-circle shadow-1-strong me-3"
+              <img class="rounded-circle shadow-1-strong "
                 src="https://th.bing.com/th/id/OIP.audMX4ZGbvT2_GJTx2c4GgHaHw?pid=ImgDet&rs=1" alt="avatar" width="40"
                 height="40" />
               <div class="w-100 ">
@@ -230,10 +233,6 @@ height: 35vh;
                   
                  </div>
                   
-
-
-                  
-                <!-- </div> -->
   
   
                 <div class=" d-flex justify-content-between align-items-center">
@@ -247,7 +246,7 @@ height: 35vh;
                   </p>
                
                 </div>
-                <div class="col-10 ms-auto text-end">
+                <div class="col-12 ms-auto text-end">
                     <p class="mb-0 text-muted"><%= Listreview[index].date %></p>
                 </div>
               </div>
@@ -255,11 +254,13 @@ height: 35vh;
           </div>
         </div>
         </div>
-        </div>
+    </div>
         
     <% } %>
-  </section>
+  </div>
 
+</div>
+  </section>
 <%- include('../htmlbody/footer') -%>
 <script>
 
