--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -55,7 +55,7 @@
                     >
                       <div class="row">
                         <div
-                          class="col-6 d-flex flex-row align-items-center mb-4"
+                          class="col-12 col-sm-6 d-flex flex-row align-items-center mb-4"
                         >
                           <div class="flex-fill mb-0">
                             <label for="name">Name</label>
@@ -63,7 +63,7 @@
                               type="text"
                               class="form-control"
                               id="name"
-                              placeholder="name"
+                              placeholder="Name"
                               name="name"
                               onchange="namevalidate()"
                             />
@@ -75,7 +75,7 @@
                           </div>
                         </div>
                         <div
-                          class="col-6 d-flex flex-row align-items-center mb-4"
+                          class="col-12 col-sm-6 d-flex flex-row align-items-center mb-4"
                         >
                           <div class="flex-fill mb-0">
                             <label for="phone">Phone</label>
@@ -103,7 +103,7 @@
                             type="email"
                             class="form-control"
                             id="email"
-                            placeholder="name@example.com"
+                            placeholder="Name@example.com"
                             name="email"
                             onchange="emailvalidate()"
                           />
@@ -117,7 +117,7 @@
 
                       <div class="row">
                         <div
-                          class="col-6 d-flex flex-row align-items-center mb-2"
+                          class="col-12 col-sm-6 d-flex flex-row align-items-center mb-4"
                         >
                           <div class="flex-fill mb-0">
                             <label for="Password">Password</label>
@@ -139,7 +139,7 @@
                         </div>
 
                         <div
-                          class="col-6 d-flex flex-row align-items-center mb-2"
+                          class="col-12 col-sm-6 d-flex flex-row align-items-center mb-4"
                         >
                           <div class="flex-fill mb-0">
                             <label for="confirmPassword"
@@ -164,15 +164,17 @@
 
                       <div class="flex-fill mb-0">
                       <div class="row">
-                        <p style="color: rgb(15, 137, 15);">Optional</p>
-                        <div class="col-6">
-                             <input type="text" value="<%= locals.refferalcode  %>"  class="form-control" name="referral" id="referral" placeholder="Refferal">
+                       
+                        <div class="col-12 col-sm-6">
+                          <label for="" style="color: rgb(15, 137, 15);">Optional</label>
+                             <input type="text" value="<%= locals.refferalcode  %>"  class="form-control" name="referral" id="referral" placeholder="Refferal (Optional)">
                         </div>
-                     <div class="col-6">
+                      
+                     <div class="col-12 col-sm-6">
 <a href="/forgotPassword">
                           <p class="text-end">Forgot password</p></a>
                      </div>
-                        
+           
                       </div>
                       
                       </div>
