--- a/views/htmlbody/navbar.ejs
+++ b/views/htmlbody/navbar.ejs
@@ -43,7 +43,7 @@ justify-content: center;
  <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
 
 
-      <div class="col-6 col-sm-2 px-1">
+      <div class="col-4 col-sm-3 col-md-2 px-1">
         <a class="navbar-brand" href="/">
       
         <img class="img-fluid " style="width: 70%;" src="/assests/logo11.png" alt="">
