--- a/views/user/productlist.ejs
+++ b/views/user/productlist.ejs
@@ -76,7 +76,7 @@
   <div class="row">
  
     <!-- lap view -->
- <div class="col-3 col-xl-2 laptopsortfilter ">
+ <div class="col-4  col-lg-3 laptopsortfilter ">
       <h5>sorting & filter</h5>
       <div class="col-12 formbox" style="width: 90%">
         <p>sort by price</p>
@@ -114,7 +114,7 @@
 
       </div>
     </div> 
-    <div class="col-12 col-sm-11 col-md-9  m-auto">
+    <div class="col-12 col-sm-10 col-md-8  m-auto">
       <div class="row mt-5" >
         <% for( let index = 0; index <locals.productList.length; index++ ) { %>
         <div class="col-9 col-sm-5 col-md-5 col-lg-3 mt-3 Main_box mx-auto" style="margin-top: 1rem;">
